--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
 /node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# Build artifacts
+# Vercel
+.vercel
+
+# Next.js
 /.next/
 /out/
-/build
 
-# Genkit cache
-.genkit/
-.genkit-cache/
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Misc
+.DS_Store
+*.pem
 
 # Local Environment Variables
-# Never commit .env files with secrets!
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# System files
-.DS_Store
